fix: bid table alignment and ui fixes

--- a/src/styles/event.css
+++ b/src/styles/event.css
@@ -799,7 +799,7 @@
   }
   .viewBy-collapT1 {
     padding: 5px!important;
-    background-color: var(--body-bg-color)!important;
+    background-color: #000 !important;
     font-size: 14px!important;
     color: var(--black)!important;
     font-weight: 500;
@@ -1719,7 +1719,7 @@
   }
   .accordion-button:not(.collapsed) {
   color: black !important;
-  background-color: white !important;
+  /* background-color: white !important; */
   }
   
   .styles_auctionConfigContainer__huK3U {
